# text-analyzer-toolkit

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
tests/: test_analyzer.py  test_utils.py
text_analyzer/: __init__.py  analyzer.py  utils.py
